[gd_scene load_steps=16 format=3 uid="uid://f738ou2ivoxs"]

[ext_resource type="Script" uid="uid://rbgw1hrp6mwh" path="res://scripts/GameManager.gd" id="1_elqb8"]
[ext_resource type="FontFile" uid="uid://dsdsw7axr2tds" path="res://assets/fonts/Kenney Mini Square.ttf" id="2_0bbpv"]
[ext_resource type="Texture2D" uid="uid://c02cctpyaek4n" path="res://assets/background.png" id="2_rvslj"]
[ext_resource type="StyleBox" uid="uid://db6s1v6bg352u" path="res://scenes/main_buttons.tres" id="3_nxtc6"]
[ext_resource type="LabelSettings" uid="uid://bfvl42gbhptkm" path="res://scenes/betting_screen_black_jack.tres" id="3_rarhs"]
[ext_resource type="StyleBox" uid="uid://b7mcobdps5rxj" path="res://scenes/buttons_pressed.tres" id="4_jlsqs"]
[ext_resource type="StyleBox" uid="uid://ok6rscd3y3m" path="res://scenes/button_hover.tres" id="5_q8u5g"]
[ext_resource type="AudioStream" uid="uid://dep5d63evt7l2" path="res://assets/Sounds/682449__geoff-bremner-audio__card_deck_flick_click.mp3" id="8_jlsqs"]

[sub_resource type="LabelSettings" id="LabelSettings_elqb8"]
font = ExtResource("2_0bbpv")
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_rarhs"]
font = ExtResource("2_0bbpv")
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_vcsgt"]
font = ExtResource("2_0bbpv")
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_c01mt"]
font = ExtResource("2_0bbpv")
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_nxtc6"]
font = ExtResource("2_0bbpv")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_qnwvq"]
font = ExtResource("2_0bbpv")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_0bbpv"]
font = ExtResource("2_0bbpv")
font_size = 36

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_elqb8")

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
z_index = 1
layout_mode = 0
offset_left = 292.0
offset_top = 533.0
offset_right = 1156.0
offset_bottom = 586.0
theme_override_constants/separation = 20

[node name="btnHit" type="Button" parent="HBoxContainer3"]
z_index = 2
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0bbpv")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("3_nxtc6")
theme_override_styles/pressed = ExtResource("4_jlsqs")
theme_override_styles/hover = ExtResource("5_q8u5g")
text = " Hit "

[node name="btnStand" type="Button" parent="HBoxContainer3"]
z_index = 2
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0bbpv")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("3_nxtc6")
theme_override_styles/pressed = ExtResource("4_jlsqs")
theme_override_styles/hover = ExtResource("5_q8u5g")
text = " Stand "

[node name="btnRestart" type="Button" parent="HBoxContainer3"]
z_index = 2
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0bbpv")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("3_nxtc6")
theme_override_styles/pressed = ExtResource("4_jlsqs")
theme_override_styles/hover = ExtResource("5_q8u5g")
text = " Restart "

[node name="btnChangeBet" type="Button" parent="HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0bbpv")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("3_nxtc6")
theme_override_styles/pressed = ExtResource("4_jlsqs")
theme_override_styles/hover = ExtResource("5_q8u5g")
text = " Back "

[node name="DealerBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 38.0
offset_right = 484.0
offset_bottom = 509.0

[node name="lblDealer" type="Label" parent="DealerBox"]
layout_mode = 2
text = "Dealer"
label_settings = SubResource("LabelSettings_elqb8")
horizontal_alignment = 1

[node name="lblDealerhand" type="Label" parent="DealerBox"]
layout_mode = 2
label_settings = SubResource("LabelSettings_rarhs")

[node name="lblbet" type="Label" parent="DealerBox"]
layout_mode = 2
label_settings = ExtResource("3_rarhs")

[node name="dealerCardBox" type="HBoxContainer" parent="DealerBox"]
layout_mode = 2

[node name="playerBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 543.0
offset_top = 38.0
offset_right = 1119.0
offset_bottom = 515.0

[node name="lblPlayer" type="Label" parent="playerBox"]
layout_mode = 2
text = "Player"
label_settings = SubResource("LabelSettings_vcsgt")
horizontal_alignment = 1

[node name="lblplayerhand" type="Label" parent="playerBox"]
layout_mode = 2
label_settings = SubResource("LabelSettings_c01mt")

[node name="lblcurrency" type="Label" parent="playerBox"]
layout_mode = 2
text = "Test for money"
label_settings = SubResource("LabelSettings_nxtc6")

[node name="PlayerCardBox" type="HBoxContainer" parent="playerBox"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = -1
layout_mode = 1
offset_left = -3.0
offset_top = -6.0
offset_right = 1148.0
offset_bottom = 647.0
mouse_filter = 2

[node name="lblTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "BlackJack"
label_settings = SubResource("LabelSettings_qnwvq")
horizontal_alignment = 1

[node name="background" type="Sprite2D" parent="VBoxContainer"]
z_index = -3
position = Vector2(575, 328)
scale = Vector2(4.55469, 2.59375)
texture = ExtResource("2_rvslj")

[node name="lblStatus" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 600.0
offset_right = 1078.0
offset_bottom = 643.0
label_settings = SubResource("LabelSettings_0bbpv")

[node name="drawCard" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_jlsqs")
volume_db = 3.0

[connection signal="pressed" from="HBoxContainer3/btnHit" to="." method="_on_hit_pressed"]
[connection signal="pressed" from="HBoxContainer3/btnStand" to="." method="_on_stand_pressed"]
[connection signal="pressed" from="HBoxContainer3/btnRestart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="HBoxContainer3/btnChangeBet" to="." method="_on_btn_change_bet_pressed"]
